--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="select-wrapper" id="select-btn-wrapper">
-                    <span id="select-btn">SELECT</span>
+                    <span id="select-btn" class="select-btn">SELECT</span>
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
                 </div>
 
                 <div class="select-wrapper" id="select-btn-wrapper">
-                    <span id="select-btn">SELECT</span>
+                    <span id="select-btn" class="select-btn">SELECT</span>
                 </div>
             </div>
         </div>
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="select-wrapper" id="select-btn-wrapper">
-                    <span id="select-btn">SELECT</span>
+                    <span id="select-btn" class="select-btn">SELECT</span>
                 </div>
             </div>
         </div>
@@ -220,7 +220,7 @@
                 </div>
 
                 <div class="select-wrapper" id="select-btn-wrapper">
-                    <span id="select-btn">SELECT</span>
+                    <span id="select-btn" class="select-btn">SELECT</span>
                 </div>
             </div>
         </div>
