--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <img src="./images/alert-icon.svg" alt="">
             </div>
             
-            <p>Ops! Looks like we don't have options available for you request!</p>
+            <p>Oops! Looks like we don't have options available for you request!</p>
         </div>
     </section>
 
