--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                 </div>
     
                 <div class="input-wrapper" id="search-button-wrapper">
-                    <!-- <a href="#jump-to-results"><span id="search-btn" name="search-btn">search</span></a> -->
                     <span id="search-btn" name="search-btn">search</span>
                 </div>
             </div>
@@ -103,7 +102,7 @@
                 </div>
 
                 <div class="select-wrapper" id="select-btn-wrapper">
-                    <span id="select-btn" class="select-btn">SELECT</span>
+                    <span id="0" class="select-btn">SELECT</span>
                 </div>
             </div>
         </div>
@@ -142,7 +141,7 @@
                 </div>
 
                 <div class="select-wrapper" id="select-btn-wrapper">
-                    <span id="select-btn" class="select-btn">SELECT</span>
+                    <span id="1" class="select-btn">SELECT</span>
                 </div>
             </div>
         </div>
@@ -181,7 +180,7 @@
                 </div>
 
                 <div class="select-wrapper" id="select-btn-wrapper">
-                    <span id="select-btn" class="select-btn">SELECT</span>
+                    <span id="2" class="select-btn">SELECT</span>
                 </div>
             </div>
         </div>
@@ -220,7 +219,7 @@
                 </div>
 
                 <div class="select-wrapper" id="select-btn-wrapper">
-                    <span id="select-btn" class="select-btn">SELECT</span>
+                    <span id="3" class="select-btn">SELECT</span>
                 </div>
             </div>
         </div>
