--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <section class="header">
         <div class="logo-img-wrapper">
-            <img src="./images/logo-white.svg" alt="">
+            <a href="./index.html"><img src="./images/logo-white.svg" alt=""></a>
         </div>
     </section>
 
