--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <input type="number"  min="1" value="1" id="guests-input" name="number-guests">
                 </div>
     
-                <div class="input-wrapper" id="search-button-wrapper">
+                <div  id="search-button-wrapper">
                     <span id="search-btn" name="search-btn">search</span>
                 </div>
             </div>
